fix: change edit-form overflow from auto to hidden
- Changed overflow-y from auto to hidden on .edit-form
- Scrolling is now handled by inner flex container
- Prevents double scrollbar and fixes margin issues

--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -69,7 +69,7 @@
       // width: 0;
       width: 715px;
       transition: .5s;
-      overflow-y: auto;
+      overflow-y: hidden;
       box-sizing: border-box;
 
       h4, .dismiss-edit {
